# airflow-spark-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: docker-compose.yml
project/dags/: test_dag.py
project/spark/: test.py
